<resources>
    <string name="app_name">Movie&amp;TV Catalogue</string>
    <string name="movie">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="movie_fav">Movie Favorite</string>
    <string name="tv_fav">TvShow Favorite</string>
    <string name="text_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>

    <string name="genre">Genre</string>
    <string name="producer">Producer Company</string>
    <string name="year">Year</string>
    <string name="overview">Overview</string>
    <string name="place_holder">Place Holder</string>
    <string name="reset_warn">Something is wrong, please refresh page</string>
    <string name="menu_favorite">Favorite</string>
    <string name="sort_a_z">Sort A~Z</string>
    <string name="sort_z_a">Sort Z~A</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
</resources>